# mc68008-debugger

./: .gitignore  Cargo.toml  Cargo_old.toml  README.md
KiCad-Parts/M27C1001-12F1/: DIP254P1524X572-32.kicad_mod  M27C1001-12F1.kicad_sym  M27C1001-12F1.step
KiCad-Parts/SN65176BD/: SN65176BD.kicad_sym  SOIC127P599X175-8N.kicad_mod
KiCad-Parts/Seeeduino-xiao-rp2040-KiCAD-Library/XIAO_PCB.pretty/: MOUDLE14P-2.54-21X17.8MM.kicad_mod
KiCad-Parts/kicad-library-WeAct-RP2040-Pico-main/symbols/: WeAct-RP2040-Pico.kicad_sym
analyzer-a/: Cargo.toml
analyzer-a/src/: main.rs
analyzer-b/: Cargo.toml
clock/: Cargo.toml
clock/.cargo/: config.toml
clock/src/: led_settings.rs  main.rs
combiner/: Cargo.toml  log.txt
combiner/src/: main.rs
eeprom/: Cargo.toml  Embed.toml  build.rs  link-ram.x  memory.x
eeprom-lc_12_2/: TODO.txt  eeprom-lc_12_2.kicad_pcb  eeprom-lc_12_2.kicad_prl  eeprom-lc_12_2.kicad_pro  eeprom-lc_12_2.kicad_sch  fp-info-cache  fp-lib-table
eeprom-lc_12_2/jlcpcb/: project.db
eeprom/.cargo/: config.toml
eeprom/src/: main.rs
eeprom_test/: Cargo.toml
eeprom_test/.cargo/: config.toml
eeprom_test/src/: main.rs
lc_12_2-server/: Cargo.toml
lc_12_2-server/.cargo/: config.toml
lc_12_2-server/src/: main.rs
lc_12_2-web/: package.json
xiao-rp2040-probe/: fp-info-cache  fp-lib-table  xiao-rp2040-probe.kicad_pcb  xiao-rp2040-probe.kicad_prl  xiao-rp2040-probe.kicad_pro  xiao-rp2040-probe.kicad_sch
