[package]
name = "combiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = { version = "0.10.1", features = ["serde", "use_serde", "serde_derive"] }
serial2-tokio = "0.1.9"
serialport5 = "5.0.2"
tokio = { version = "1.37.0", features = ["full"] }
