[package]
name = "lc-12-2-server"
version = "0.1.0"
authors = ["Jomer.Dev <Jomer.Dev@posteo.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["integrated-timers","task-arena-size-12288"] }
embassy-net = { version = "0.4.0", features = ["dhcpv4","medium-ethernet","proto-ipv4","tcp","udp"] }
embassy-net-driver = { version = "0.2.0" }
embassy-time = "0.3.0"
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.11.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32c6", "embassy", "async", "embassy-time-timg0", "embassy-executor-thread", "embassy-executor-interrupt" ] }
esp-println = { version = "0.9.0", features = ["esp32c6", "jtag-serial", "defmt-espflash"], default-features = false }
esp-wifi = { version = "0.5.1", features = ["defmt", "wifi-default", "esp32c6", "embassy-net"], default-features = false }
futures-util = { version = "0.3.30", features = ["async-await", "async-await-macro", "futures-macro", "futures-sink", "portable-atomic", "sink"], default-features = false }
log = { version = "0.4.20" }
portable-atomic = { version = "1.6.0", features = ["fallback", "require-cas"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
